# 990-xml-database

./: .gitignore  .gitmodules  Dockerfile  Pipfile  README.md  docker-compose.yml  download_immigration_xmls.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml
990-xml-reader/irs_reader/: file_utils.py
990-xml-reader/irs_reader/XML/: 202300129349302605_public.xml  202300379349301115_public.xml  202300459339300920_public.xml  202300459349100400_public.xml  202300469339300100_public.xml  202300749349302095_public.xml  202300829349300940_public.xml  202300899349301135_public.xml  202301019349300035_public.xml  202301039349301620_public.xml  202301159339300200_public.xml  202301229349300600_public.xml  202301309349305825_public.xml  202301319349302585_public.xml  202301329349300740_public.xml  202301329349308855_public.xml  202301359349307585_public.xml  202301459349300120_public.xml  202301939349300315_public.xml  202302029349301020_public.xml  202302219349301605_public.xml  202302279339301155_public.xml  202302339349300035_public.xml  (+139 more)
data/raw/: all-immigration-ein-matches.txt  immigration-eins.txt
irsdb/: emptyhead_blacklist.txt  merge_eins.py  name_match_eins.txt  name_state_match_eins.txt
irsdb/filing/: apps.py  models.py
irsdb/generated_schemas/: django_models_auto.py
irsdb/irsdb/: settings.py  urls.py
irsdb/metadata/: admin.py  apps.py  irsx_utils.py  models.py  urls.py  views.py
irsdb/return/: apps.py  models.py
irsdb/schemas/: apps.py  documentation_utils.py  model_accumulator.py  type_utils.py
(+23 files in other folders)
