[tool.poetry]
name = "990-xml-database"
version = "0.1.0"
description = ""
authors = ["Andrea Suozzo <asuozzo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
psycopg2 = "^2.9.9"
requests = "^2.32.2"
unidecode = "^1.3.8"
irsx = {git = "git@github.com:propublica/990-xml-reader.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
